--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:server": "json-server server.json -p 3333 -w -d 500"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.3",
@@ -17,10 +18,12 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.1.0",
+    "json-server": "^0.17.3",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
